added 'settings' button with alert

--- a/app/views/map.xml
+++ b/app/views/map.xml
@@ -1,5 +1,7 @@
 <Alloy>
 	<Window title='Map'>
 		<View id="mapview" module="ti.map" />
+		
+		<RightNavButton id="settingsButton" onClick="openSettings" />
 	</Window>
 </Alloy>
